--- a/ProyectoEstructuras/pom.xml
+++ b/ProyectoEstructuras/pom.xml
@@ -18,6 +18,12 @@
             <artifactId>javafx-fxml</artifactId>
             <version>13</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>4.3.30.RELEASE</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
