--- a/ProyectoEstructuras2/pom.xml
+++ b/ProyectoEstructuras2/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>ec.edu.espol</groupId>
-    <artifactId>ProyectoEstructuras2</artifactId>
+    <artifactId>PS2Personal</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -36,7 +36,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>ec.edu.espol.proyectoestructuras2.App</mainClass>
+                    <mainClass>ec.edu.espol.ps2personal.App</mainClass>
                 </configuration>
                 <executions>
                     <execution>
